gcc/testsuite/rust/rustc/ui/error-codes/E0658.rs
#[repr(u128)]
enum Foo { // { dg-error ".E0658." "" { target *-*-* } }
    Bar(u64),
}

fn main() {}

